--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           </ul>
           <h3>Skills</h3>
           <ul>
-            <li>HTML/CSS3</li>
+            <li>HTML5/CSS3</li>
             <li>JavaScript</li>
             <li>jQuery</li>
           </ul>
