--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <address>
             <p>Phone: +44 7576787903</p>
             <p>E-mail: s.smith@xyz.com</p>
-            <p>Linkdin: sallysmith</p>
+            <p>Linkdin: Sally Smith</p>
             <p>GitHub: sally_smith</p>
         </address>
       </div>
