--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <div class="left">
         <img class="sally-image" src="images/sally.jpg" alt="Sally's image">
         <address>
+            <h3>Contacts:</h3>
             <p>Phone: +44 07576787903</p>
             <p>E-mail: s.smith@xyz.com</p>
             <p>Linkdin: Sally Smith</p>
